--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
+    "@types/reactour": "^1.17.1",
     "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
@@ -50,6 +51,7 @@
     "lint-staged": "^10.4.2",
     "prettier": "^2.1.2",
     "redux-logger": "^3.0.6",
+    "styled-components": "^5.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recess-order": "^2.3.0",
