--- a/package.json
+++ b/package.json
@@ -89,11 +89,11 @@
     "vueIndentScriptAndStyle": false,
     "endOfLine": "lf"
   },
-  // "husky": {
-    // "hooks": {
-      // "pre-commit": "lint-staged"
-    // }
-  // },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
